fixed card service registration
